--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MAD_T2_AND_T3_BMI_Calculator</string>
     <string name="are_you_at_least_20_years_old">Are you at least 20 Years Old?</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
 </resources>
