Third Activity User Interface Created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="your_prefered_system">Your prefered System</string>
     <string name="metric">Metric</string>
     <string name="imperial">Imperial</string>
+    <string name="you_have_selected_matric_system">You have selected matric system</string>
+    <string name="weight">Weight</string>
+    <string name="kg">KG</string>
+    <string name="cm">CM</string>
+    <string name="height">Height</string>
+    <string name="next">NEXT</string>
 </resources>
