Just try to get the string value from resources and clear some warninigs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="height">Height</string>
     <string name="next">NEXT</string>
     <string name="your_prefered_system">Your prefered System</string>
+    <string name="Title1">You have selected Metric System</string>
+    <string name="Title2">You have selected Imperial System</string>
 </resources>
